# bee-label

./: .gitignore  README.md  packages.txt  pyproject.toml
src/bee_label/: color_manipulation.py  dashboard.py  enums.py  figma_api.py  image_manipulation.py  rendering.py  textures_applyer.py
